--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,11 @@
     src: url("../public/fonts/google/Roboto-Light.ttf") format("opentype");
 }
 
-
-
-
-
 body {
     font-family: Roboto, sans-serif;
     font-weight: 300;
+}
+
+p {
+    font-size: 14px;
 }
