--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,22 +1,55 @@
 @import "styles/mixins";
 @import "styles/breakpoints";
 
-.main {
-    width: fit-content;
+$wrap: "main";
 
-    @include breakpoint('min-xsmall') {
-        padding: 16px;
-    }
+.#{$wrap} {
 
-    @include breakpoint('min-small') {
-    }
 
-    @include breakpoint('min-medium') {
-    }
+  @include breakpoint('min-xsmall') {
+    padding: 16px;
+  }
 
-    @include breakpoint('min-large') {
-    }
+  @include breakpoint('min-small') {
+  }
 
-    @include breakpoint('min-xlarge') {
+  @include breakpoint('min-medium') {
+  }
+
+  @include breakpoint('min-large') {
+  }
+
+  @include breakpoint('min-xlarge') {
+  }
+
+  &__noise {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+    z-index: 1;
+
+    &:after {
+      content: "";
+      width: calc(100% + 20rem);
+      height: calc(100% + 20rem);
+      background-position: 50%;
+      position: absolute;
+      left: -10rem;
+      top: -10rem;
+      background-image: url("../public/images/noise.png");
+      will-change: transform;
+      animation: styles_main__noise 1s steps(2) infinite;
+      animation-duration: 1s;
+      animation-timing-function: steps(2);
+      animation-delay: 0s;
+      animation-iteration-count: infinite;
+      animation-direction: normal;
+      animation-fill-mode: none;
+      animation-play-state: running;
+      animation-name: styles_main__noise;
     }
+  }
 }
