Fix mobile layout

--- a/components/organisms/presentation-board/PresentationBoard.module.scss
+++ b/components/organisms/presentation-board/PresentationBoard.module.scss
@@ -1,10 +1,14 @@
+@import "styles/mixins";
+@import "styles/breakpoints";
+
+
 $wrap: "presentationBoard";
 
 .#{$wrap} {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  height: calc(100vh - 48px);
 
   &__description {
     display: flex;
@@ -21,9 +25,31 @@ $wrap: "presentationBoard";
     display: flex;
     align-items: center;
     justify-content: center;
+
+
+  }
+
+  &__imageContainer {
+    position: relative;
+    height: calc(100vh - 400px);
+    width: 320px;
   }
 
   &__footerSection {
 
+  }
+
+  &__headerSection {
+    justify-content: space-between;
+    @include breakpoint('min-xsmall') {
+      display: block;
+    }
+    @include breakpoint('min-medium') {
+      display: flex;
+    }
+  }
+
+  &__icon {
+    padding-right: 8px;
   }
 }
