--- a/components/organisms/presentation-board/PresentationBoard.module.scss
+++ b/components/organisms/presentation-board/PresentationBoard.module.scss
@@ -25,18 +25,26 @@ $wrap: "presentationBoard";
     display: flex;
     align-items: center;
     justify-content: center;
-
+    @include breakpoint('min-xsmall') {
+      padding-top: 16px;
+    }
+    @include breakpoint('min-medium') {
+      padding-top: 0;
+    }
 
   }
 
   &__imageContainer {
     position: relative;
     height: calc(100vh - 400px);
+    max-height: 380px;
     width: 320px;
   }
 
   &__footerSection {
-
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
   }
 
   &__headerSection {
@@ -51,5 +59,20 @@ $wrap: "presentationBoard";
 
   &__icon {
     padding-right: 8px;
+  }
+
+  &__scrollSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+    @include breakpoint('min-xsmall') {
+      position: absolute;
+      bottom: 6px;
+    }
+    @include breakpoint('min-medium') {
+      position: inherit;
+      bottom: 0;
+    }
   }
 }
